--- a/index.html
+++ b/index.html
@@ -195,3 +195,25 @@ button {
     <button class="next"></button>
   </div>
 </div>
+    <script>
+const nextButton = document.querySelector('.next');
+const prevButton = document.querySelector('.prev');
+
+nextButton.addEventListener(
+  'click',
+  () => {
+    const items = document.querySelectorAll('.item');
+    document.querySelector('.slide').appendChild(items[0]);
+  },
+);
+
+prevButton.addEventListener(
+  'click',
+  () => {
+    const items = document.querySelectorAll('.item');
+    document.querySelector('.slide').prepend(items[items.length - 1]);
+  },
+);
+    </script>
+    </body>
+</html>
